--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^6.17.0",
+    "@prisma/client": "^6.19.2",
+    "better-auth": "^1.4.18",
     "dotenv": "^17.2.4",
     "next": "14.2.35",
     "pg": "^8.18.0",
