working on user's  features -2

--- a/.env
+++ b/.env
@@ -7,5 +7,5 @@
 
 # DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 DATABASE_URL="postgresql://postgres:Gourav123@127.0.0.1:5432/campusFlow"
-BETTER_AUTH_SECRET="hcYKCnhijrIdOkylu/Eztq7HNkbpCux5T76xYd7F7Sw=" 
+BETTER_AUTH_SECRET=zdDtX5b5SRTmiTSz7YnMqTvgJecYX8oC
 BETTER_AUTH_URL=http://localhost:3000
